# ChessEngine

./: .gitignore  CMakeLists.txt  README.md
include/: Board.hpp  Definitions.hpp  Move.hpp  MoveGenerator.hpp  TranspositionTable.hpp  Zobrist.hpp
src/: Board.cpp  MoveGenerator.cpp  Perft.cpp  main.cpp
